# catalyst

./: .gitignore  CHANGELOG  CMakeLists.txt  CMakeSources.txt  LICENSE  README.md
.github/workflows/: build.yml
catalyst/: logging.c  memory.c  window.c
catalyst-editor/editor/: main.c
catalyst/internal/: window.h
catalyst/memory/: allocator.h  free_list_allocator.c  linear_allocator.c  pool_allocator.c  stack_allocator.c  system_allocator.c
catalyst/window/: win32_window.c
include/catalyst/: compiler.h  logging.h  memory.h  window.h
include/catalyst/utilities/: pointer_math.h
